# casespaetzle

./: .gitignore  Cargo.toml  README.md
cases-macro/: Cargo.toml
cases-macro/src/: lib.rs
casespaetzle/: Cargo.toml  README.md
casespaetzle-js/: .gitignore  .npmignore  README.md  build.js  index.js  package.json  test.js
casespaetzle-macro/: Cargo.toml  README.md
casespaetzle-macro/src/: lib.rs
casespaetzle/src/: cases.rs  custom.rs  lib.rs
src/: custom.rs  lib.rs
