[package]
name = "casespaetzle-macro"
version = "0.1.1"
edition = "2021"
description = "This package introduces a procedural macro for the crate 'casespaetzle'"
authors = ["Anatoly Weinstein <anatoly.wein@gmail.com>"]
license = "Apache-2.0"

homepage = "https://github.com/Anatoly03/casespaetzle/tree/master/casespaetzle-macro" # TODO redirect to cargo documentation
repository = "https://github.com/Anatoly03/casespaetzle/tree/master/casespaetzle-macro"
readme = "README.md"
keywords = ["util", "string"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
paste = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0.87"

