[package]
name = "casespaetzle"
description = "This package introduces common identifier case traits and a macro for case trait generation."
authors = ["Anatoly Weinstein <anatoly.wein@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

homepage = "https://github.com/Anatoly03/casespaetzle/tree/master/casespaetzle" # TODO redirect to cargo documentation
repository = "https://github.com/Anatoly03/casespaetzle/tree/master/casespaetzle"
readme = "README.md"
keywords = ["util", "string", "cases"]

[dependencies]
casespaetzle-macro = { path="../casespaetzle-macro", version = "0.1.1" }
